--- a/src/thesis/FXML_Leader_Board.fxml
+++ b/src/thesis/FXML_Leader_Board.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="thesis.FXML_Leader_BoardController">
+<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="thesis.ResultController">
    <children>
       <Pane prefHeight="650.0" prefWidth="600.0">
          <children>
