--- a/src/thesis/FXML_Word_First.fxml
+++ b/src/thesis/FXML_Word_First.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="650.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="thesis.FXMLController_Word_Health">
+<AnchorPane id="AnchorPane" fx:id="healthAnchorPane" prefHeight="650.0" prefWidth="650.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="thesis.HealthController">
     <stylesheets>
-        <URL value="@fxml3.css" />
+        <URL value="@words.css" />
     </stylesheets>
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffaa2133" height="650.0" stroke="#00000033" strokeType="INSIDE" width="650.0" />
@@ -220,10 +220,10 @@
             </Label>
          </children>
       </Pane>
-      <Pane fx:id="fourthPane" layoutX="140.0" layoutY="48.0" prefHeight="508.0" prefWidth="503.0" visible="false">
+      <Pane fx:id="fourthPane" layoutX="140.0" layoutY="48.0" prefHeight="508.0" prefWidth="503.0">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e0c4db" height="510.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="503.0" />
-            <Label layoutX="117.0" layoutY="31.0" text="gyümölcs - fruit">
+            <Label layoutX="121.0" layoutY="31.0" text="boldog - happy">
                <font>
                   <Font size="36.0" />
                </font>
@@ -343,7 +343,7 @@
       <Pane fx:id="seventhPane" layoutX="140.0" layoutY="48.0" prefHeight="508.0" prefWidth="503.0" visible="false">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e0c4db" height="510.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="503.0" />
-            <Label layoutX="117.0" layoutY="31.0" text="diétázik – to be on a diet">
+            <Label layoutX="69.0" layoutY="33.0" text="diétázik – to be on a diet">
                <font>
                   <Font size="36.0" />
                </font>
@@ -500,6 +500,11 @@
             </Label>
          </children>
       </Pane>
+      <Button fx:id="testClick" layoutX="458.0" layoutY="594.0" onAction="#testClickAction" prefHeight="42.0" prefWidth="178.0" text="Teszt megoldása">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
       
    </children>
 </AnchorPane>
