--- a/src/thesis/words.css
+++ b/src/thesis/words.css
@@ -10,3 +10,11 @@
     -fx-background-insets: 0;
     -fx-border-radius: 4;
 }
+
+.button:focused{
+    -fx-border-color: #CE1F1B;
+    -fx-text-fill: #CE1F1B;
+    -fx-background-color:#e0c4db;
+    -fx-background-insets: -1.4, 0, 1, 2;
+    -fx-background-radius: 6.4, 5, 4, 3;  
+}
