--- a/src/thesis/FXML_Word_First.fxml
+++ b/src/thesis/FXML_Word_First.fxml
@@ -500,7 +500,7 @@
             </Label>
          </children>
       </Pane>
-      <Button fx:id="testClick" layoutX="414.0" layoutY="594.0" onAction="#testClickAction" prefHeight="42.0" prefWidth="178.0" style="-fx-background-color: #8AD1FA;" text="Teszt megoldása">
+      <Button fx:id="testClick" layoutX="414.0" layoutY="594.0" disable="true" onAction="#testClickAction" prefHeight="42.0" prefWidth="178.0" style="-fx-background-color: #8AD1FA;" text="Teszt megoldása">
          <font>
             <Font size="20.0" />
          </font>
