--- a/src/thesis/FXML_Login.fxml
+++ b/src/thesis/FXML_Login.fxml
@@ -11,69 +11,97 @@
 
 <AnchorPane id="AnchorPane" fx:id="rootPane" prefHeight="650.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="thesis.LoginController">
     <children>
-      <Pane prefHeight="650.0" prefWidth="650.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffae2133" height="650.0" stroke="BLACK" strokeType="INSIDE" width="650.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="95.0" layoutX="54.0" layoutY="69.0" stroke="BLACK" strokeType="INSIDE" width="547.0">
-         <fill>
-            <LinearGradient endX="1.0" endY="0.5192307692307692" startY="0.5288461538461539">
-               <stops>
-                  <Stop color="#3794dbbb" />
-                  <Stop color="#53bcdab8" offset="0.3188376346271082" />
-                  <Stop color="#53bcdab8" offset="0.700848404795773" />
-                  <Stop color="#3794dbba" offset="0.9966216216216216" />
-                  <Stop color="#3692ddba" offset="1.0" />
-               </stops>
-            </LinearGradient>
-         </fill></Rectangle>
-      <Label layoutX="140.0" layoutY="95.0" text="Nyelvprogram időseknek">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
-        <Label fx:id="label" layoutX="83.0" layoutY="348.0" minHeight="16" minWidth="69" text="Adja meg a felhasználónevét:">
-         <font>
-            <Font size="24.0" />
-         </font></Label>
-      <Label layoutX="83.0" layoutY="455.0" text="Adja meg az életkorát:">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="83.0" layoutY="403.0" text="Adja meg a nemét:">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="83.0" layoutY="504.0" prefHeight="37.0" prefWidth="270.0" text="Adja meg a telefonszámát:">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <TextField fx:id="inputUsername" layoutX="406.0" layoutY="349.0" />
-      <ChoiceBox fx:id="genericBox" layoutX="406.0" layoutY="404.0" prefHeight="21.0" prefWidth="161.0" />
-      <TextField fx:id="inputAge" layoutX="406.0" layoutY="456.0" />
-      <TextField fx:id="inputId" layoutX="406.0" layoutY="509.0" />
-        <Button fx:id="button" layoutX="406.0" layoutY="561.0" onAction="#loadSecond" prefHeight="37.0" prefWidth="161.0" style="-fx-background-color: #8AD1FA; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Tovább">
-         <font>
-            <Font size="18.0" />
-         </font>
-         <tooltip>
-            <Tooltip text="A gomb megnyomásával a Választható témák felületére érsz." />
-         </tooltip></Button>
-      <Label layoutX="222.0" layoutY="195.0" text="Kedves Felhasználó!">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="37.0" layoutY="243.0" text="Az alábbi adatok megadásával és a program segítségével ">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="127.0" layoutY="272.0" text="elkezdheted az angol nyelv elsajátítását.">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
+      <Pane fx:id="basePane" prefHeight="650.0" prefWidth="650.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffae2133" height="650.0" stroke="BLACK" strokeType="INSIDE" width="650.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" height="95.0" layoutX="52.0" layoutY="73.0" stroke="BLACK" strokeType="INSIDE" width="547.0">
+               <fill>
+                  <LinearGradient endX="1.0" endY="0.5192307692307692" startY="0.5288461538461539">
+                     <stops>
+                        <Stop color="#3794dbbb" />
+                        <Stop color="#53bcdab8" offset="0.3188376346271082" />
+                        <Stop color="#53bcdab8" offset="0.700848404795773" />
+                        <Stop color="#3794dbba" offset="0.9966216216216216" />
+                        <Stop color="#3692ddba" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </fill>
+            </Rectangle>
+            <Label layoutX="138.0" layoutY="99.0" text="Nyelvprogram időseknek">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+              <Label fx:id="label" layoutX="83.0" layoutY="347.0" minHeight="16" minWidth="69" text="Adja meg a felhasználónevét:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="83.0" layoutY="399.0" text="Adja meg a nemét:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="83.0" layoutY="454.0" text="Adja meg az életkorát:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="83.0" layoutY="502.0" prefHeight="37.0" prefWidth="270.0" text="Adja meg a telefonszámát:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <TextField fx:id="inputUsername" layoutX="407.0" layoutY="348.0" />
+            <ChoiceBox fx:id="genericBox" layoutX="407.0" layoutY="400.0" prefHeight="21.0" prefWidth="161.0" />
+            <TextField fx:id="inputAge" layoutX="407.0" layoutY="455.0" />
+            <TextField fx:id="inputId" layoutX="407.0" layoutY="507.0" />
+              <Button fx:id="button" layoutX="407.0" layoutY="570.0" onAction="#loadSecond" prefHeight="37.0" prefWidth="161.0" style="-fx-background-color: #8AD1FA; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Tovább">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <tooltip>
+                  <Tooltip text="A gomb megnyomásával a Választható témák felületére érsz." />
+               </tooltip>
+            </Button>
+            <Label layoutX="222.0" layoutY="205.0" text="Kedves Felhasználó!">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="37.0" layoutY="243.0" text="Az alábbi adatok megadásával és a program segítségével ">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="153.0" layoutY="272.0" text="elkezdheted az angol nyelv elsajátítását.">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+         </children></Pane>
+      <Pane fx:id="rightPane" layoutX="152.0" layoutY="225.0" prefHeight="200.0" prefWidth="350.0" visible="false">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e6b4e2" height="200.0" layoutX="1.0" stroke="BLACK" strokeType="INSIDE" width="350.0" />
+            <Label layoutX="14.0" layoutY="36.0" text="Valamely adatot nem adott meg,">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="39.0" layoutY="71.0" text="vagy helytelenül adott meg!">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Button fx:id="buttonRight" layoutX="117.0" layoutY="133.0" onAction="#loadRight" prefHeight="37.0" prefWidth="120.0" style="-fx-background-color: #8AD1FA; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Rendben">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <tooltip>
+                  <Tooltip text="A gomb megnyomásával  ismét próbálkozhat az adatok megadásával." />
+               </tooltip>
+            </Button>
+         </children>
+      </Pane>
     </children>
 </AnchorPane>
