--- a/src/thesis/FXML_Word_First.fxml
+++ b/src/thesis/FXML_Word_First.fxml
@@ -126,7 +126,7 @@
             </Button>
          </children>
       </VBox>
-      <Pane fx:id="firstPane" layoutX="140.0" layoutY="56.0" prefHeight="508.0" prefWidth="503.0">
+      <Pane fx:id="firstPane" layoutX="140.0" layoutY="56.0" prefHeight="508.0" prefWidth="503.0" visible="false">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e0c4db" height="510.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="503.0" />
             <Label layoutX="117.0" layoutY="31.0" text="egészség - health">
